# webscraper

./: .pylintrc  pyproject.toml
.github/workflows/: minimal-supported-dependencies.yml  python.yml
docs/: config.example.toml  system_design.md
src/webscraper/: config.py  items.py  middlewares.py  pipelines.py  settings.py
src/webscraper/_scripts/: main.py
src/webscraper/spiders/: configurable.py
