[project]
name = "webscraper"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scrapy>=2.12.0, <3.0.0",
    "scrapy-playwright>=0.0.44, <1.0.0",
    "trafilatura>=2.0.0, <3.0.0",
]

authors = [
    { name = "matee8", email = "graves-bluff-pesky@duck.com" }
]

[project.urls]
Homepage = ""
Repository = ""
Issues = ""

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "setuptools>=80.1.0, <81.0.0",
    "pylint>=3.0.4, <4.0.0",
    "pytest>=8.0.2, <9.0.0",
    "yapf>=0.43.0",
    "pytest-cov>=6.0.0, <7.0.0",
]

[project.scripts]
webscraper = "webscraper._scripts.main:main"
